Community leave popup fix on mobile

--- a/src/app/components/communities/communities-inner/communities-inner.component.scss
+++ b/src/app/components/communities/communities-inner/communities-inner.component.scss
@@ -124,6 +124,9 @@
     .modal-footer {
         border: none;
     }
+    @include mq($from: $mobile_sm, $until: $mobile_lg) {
+        width: 95%;
+    }
 }
 
 .o-cadminlist {
