--- a/src/app/shared/modal-new/modal.component.scss
+++ b/src/app/shared/modal-new/modal.component.scss
@@ -40,6 +40,9 @@
     margin: 50px auto;
     display: table;
     margin-top: 0px;
+    @include mq($from: $mobile_sm, $until: $mobile_lg){
+        width: 100%;
+    }
 }
 
 // create channel form
@@ -101,6 +104,7 @@
 .modal-cus-body{
     @include mq($from: $mobile_sm, $until: $mobile_lg) {
         margin: 10px;
+        width: 100%;
     }
 }
 
